# ReadTempSensor

./: CMakeLists.txt  README.md  ReadTempSensor.ioc
Core/Src/: DMA-Collector.c  DMA-Collector.h  UART4.c  UART4.h  emergency.h  habanero.c  habanero.h  main.X01  main.c  stdLibrary.c  stdLibrary.h  sysmem.c  system_stm32f4xx.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
cmake/: toolchain.cmake  toolchain.cmake.sample
